--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <title>User Login</title>
+  <title>Angular 2 POC</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
